--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(eb_smoother)
 export(nbinom2)
 importFrom(glmmTMB,betabinomial)
 importFrom(glmmTMB,nbinom2)
+importFrom(stats,offset)
 importFrom(stats,predict)
